--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,13 +36,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   firebase_core: ^3.1.0
-  firebase_auth: ^5.1.0
-  cloud_firestore: ^5.0.1
   http: ^1.2.1
+  supabase_flutter: ^2.5.11
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  web:
+    generate: true
+    image_path: "lib/MyBookshelfIcon.png"
+  windows:
+    generate: true
+    image_path: "lib/MyBookshelfIcon.png"
+    icon_size: 256 # min:48, max:256, default: 48
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
