--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,7 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
-
-on:
+name: deploy MyBookshelf
   # Runs on pushes targeting the default branch
   push:
     branches: ["master"]
