Update and rename bug.yaml to bug.yml

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,5 +1,5 @@
 name: 🐛 Segnala un Bug
-about: Hai trovato un bug? Segnalalo!
+description: Hai trovato un bug? Segnalalo!
 title: "[Bug]: "
 labels: ["bug", "triage"]
 assignees:
