--- a/.github/ISSUE_TEMPLATE/1_bug.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug.yml
@@ -4,7 +4,7 @@
 - labels: ["bug", "triage"]
 - assignees:
   - riccardodebellini
-- body:
+body:
   - type: textarea
     id: what-happened
     attributes:
