--- a/.github/ISSUE_TEMPLATE/1_bug.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug.yml
@@ -52,6 +52,8 @@ body:
     attributes:
       label: Versione
       description: Che versione stai usando?
+      placeholder:  Windows
+      value: Windows
   - type: checkboxes
     id: terms
     attributes:
