--- a/.github/ISSUE_TEMPLATE/1_bug.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug.yml
@@ -57,7 +57,7 @@ body:
   - type: checkboxes
     id: terms
     attributes:
-      label: "L'app è originale"
+      label: L'app è originale
       description: Inviando la richiesta, dichiaro di star usando una versione originale della app come è stata pensata, sviluppata e distribuita da riccardodebellini.github.io, senza modifiche o distribuzioni non autorizzate. 
       options:
         - label: Sto usando una app originale
