--- a/.github/workflows/supabase_unpause.yml
+++ b/.github/workflows/supabase_unpause.yml
@@ -3,8 +3,6 @@ name: Get Supabase Data Daily
 on:
   schedule:
     - cron: '0 17 * * *'  # Runs at 5:00 PM everyday (UTC)
-  workflow_dispatch:
-
 
 jobs:
   get-data:
@@ -19,19 +17,24 @@ jobs:
         run: npm install @supabase/supabase-js
       - name: Get Data from Supabase
         run: |
-          const { createClient } = require('@supabase/supabase-js')
+          const supabaseUrl = 'https://wmztgdkplkomzdwileqx.supabase.co';
+          const anonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndtenRnZGtwbGtvbXpkd2lsZXF4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjMwMzEzMzMsImV4cCI6MjAzODYwNzMzM30.eWwZMt4qe7JyuUMubB9gCxDQMKnKPGuQp-k1Y1U5NpI';
 
-          const supabaseUrl = 'https://wmztgdkplkomzdwileqx.supabase.co'
-          const anonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndtenRnZGtwbGtvbXpkd2lsZXF4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjMwMzEzMzMsImV4cCI6MjAzODYwNzMzM30.eWwZMt4qe7JyuUMubB9gCxDQMKnKPGuQp-k1Y1U5NpI'
+          const { createClient } = require('@supabase/supabase-js');
 
-          const supabase = createClient(supabaseUrl, anonKey)
+          const supabase = createClient(supabaseUrl, anonKey);
 
-          // Replace 'your_table_name' and 'select_query' with your actual values
-          const { data, error } = await supabase.from('profile').select()
-
-          if (error) {
-            console.error('Error fetching data:', error)
-          } else {
-            console.log('Fetched data:', data)
+          // Replace this with your actual function to fetch data from Supabase
+          async function fetchData() {
+            const { data, error } = await supabase.table('your_table_name').select('*');
+            if (error) {
+              console.error('Error fetching data:', error);
+              return;
+            }
+            console.log('Fetched data:', data);
           }
-  
+
+          fetchData();
+        env:
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}  # Optional: Use a secret for URL
+          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}  # Store Anon Key as a secret
