--- a/.github/workflows/supabase_unpause.yml
+++ b/.github/workflows/supabase_unpause.yml
@@ -1,41 +1,16 @@
-name: Get Supabase Data Daily
+# .github/workflows/supabase-activity-scheduler.yml
+
+name: Supabase Activity Scheduler
 
 on:
   schedule:
-    - cron: '0 17 * * *'  # Runs at 5:00 PM everyday (UTC)
-  workflow_run:
+    - cron: "0 0 * * 0,3" # Runs every Sunday and Wednesday
+  workflow_dispatch:
 
 jobs:
-  get-data:
+  send-http-request:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 16
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Install dependencies
-        run: npm install @supabase/supabase-js
-      - name: Get Data from Supabase
-        run: |
-          const supabaseUrl = 'https://wmztgdkplkomzdwileqx.supabase.co';
-          const anonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndtenRnZGtwbGtvbXpkd2lsZXF4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjMwMzEzMzMsImV4cCI6MjAzODYwNzMzM30.eWwZMt4qe7JyuUMubB9gCxDQMKnKPGuQp-k1Y1U5NpI';
-
-          const { createClient } = require('@supabase/supabase-js');
-
-          const supabase = createClient(supabaseUrl, anonKey);
-
-          // Replace this with your actual function to fetch data from Supabase
-          async function fetchData() {
-            const { data, error } = await supabase.table('your_table_name').select('*');
-            if (error) {
-              console.error('Error fetching data:', error);
-              return;
-            }
-            console.log('Fetched data:', data);
-          }
-
-          fetchData();
-        env:
-          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}  # Optional: Use a secret for URL
-          SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}  # Store Anon Key as a secret
+      - name: Send HTTP Request
+        run: curl https://wmztgdkplkomzdwileqx.supabase.co/api/etc/supabase-activity-scheduler
