--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^3.1.0
   http: ^1.2.1
   supabase_flutter: ^2.5.11
   url_launcher: ^6.3.0
   bitsdojo_window: ^0.1.6
+  flutter_local_notifications: ^17.2.2
+  timezone: ^0.9.4
+  google_fonts: ^6.2.1
+  skeletonizer: ^1.4.2
+  flex_list: ^1.0.0
 
 dev_dependencies:
   flutter_test:
