--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   google_fonts: ^6.2.1
   skeletonizer: ^1.4.2
   flex_list: ^1.0.0
+  flutter_localizations:
+    sdk: flutter
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
