--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   permission_handler: ^11.3.1
+  go_router: ^14.8.1
 
 dev_dependencies:
   flutter_test:
